--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -17,12 +17,15 @@
     "storybook": "start-storybook -p 6007",
     "build-storybook": "build-storybook",
     "build": "bob build",
-    "release": "release-it"
+    "release": "release-it",
+    "test": "jest"
   },
   "dependencies": {
-    "@dank-style/animation-plugin": "^0.0.1",
+    "@dank-style/animation-plugin": "^0.0.3",
     "@dank-style/react": "^0.3.10",
-    "@expo/html-elements": "^0.4.1",
+    "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/actionsheet": "^0.2.1",
+    "@gluestack-ui/alert-dialog": "^0.1.3",
     "@gluestack/design-system": "0.3.35",
     "@legendapp/motion": "^2.2.0",
     "@react-native-aria/overlays": "0.3.5-rc.2",
@@ -38,6 +41,7 @@
     "react": "^18.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "13.4.0",
+    "ts-jest": "^29.1.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -67,6 +71,7 @@
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.18.10",
     "find-yarn-workspace-root": "^2.0.0",
+    "jest-environment-jsdom": "^29.5.0",
     "react-native-builder-bob": "^0.20.3",
     "storybook-dark-mode": "^2.0.4",
     "typescript": "4.9.4"
