--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -63,6 +63,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["lib", "node_modules", "storybookDocsComponents"],
+  "exclude": ["lib", "node_modules", "storybookDocsComponents", "__tests__"],
   "include": ["src"]
 }
