--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -32,7 +32,8 @@
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/utils": "latest",
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "@gluestack-ui/form-control": "latest"
   },
   "peerDependencies": {
     "react": ">=16",
