--- a/modal/package.json
+++ b/modal/package.json
@@ -36,7 +36,7 @@
     "@gluestack-ui/utils": "latest",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/overlays": "0.3.5",
-    "@react-types/dialog": "^3.5.0",
+    "@react-native-aria/dialog": "latest",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
