--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -32,11 +32,12 @@
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/transitions": "latest",
     "@gluestack-ui/utils": "latest",
+    "@gluestack-ui/hooks": "latest",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/menu": "^0.2.6",
     "@react-native-aria/overlays": "0.3.5",
-    "react-native-svg": "13.4.0",
-    "react-stately": "^3.21.0"
+    "react-stately": "^3.21.0",
+    "@react-stately/utils": "latest"
   },
   "peerDependencies": {
     "react": ">=16",
