--- a/example/storybook/src/ui-components/Heading/config.json
+++ b/example/storybook/src/ui-components/Heading/config.json
@@ -1,1 +1,4 @@
-{ "dependencies": {}, "keywords": ["components", "core"] }
+{
+  "dependencies": { "@expo/html-elements": "latest" },
+  "keywords": ["components", "core"]
+}
