--- a/example/expo-project/package.json
+++ b/example/expo-project/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expo-project",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
