--- a/menu/package.json
+++ b/menu/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@gluestack-ui/overlay": "latest",
-    "@gluestack-ui/react-native-aria": "latest",
+    "@gluestack-ui/react-native-aria": "0.1.2",
     "@gluestack-ui/transitions": "latest",
     "@gluestack-ui/utils": "latest",
     "@gluestack-ui/hooks": "latest",
