--- a/example/storybook/src/ui-components/Icons/config.json
+++ b/example/storybook/src/ui-components/Icons/config.json
@@ -1,4 +1,4 @@
 {
-  "dependencies": { "@gluestack-ui/icon": "^0.1.0" },
+  "dependencies": { "@gluestack-ui/icon": "latest" },
   "keywords": ["components", "core"]
 }
