--- a/example/storybook/src/ui-components/Icons/config.json
+++ b/example/storybook/src/ui-components/Icons/config.json
@@ -1,4 +1,7 @@
 {
-  "dependencies": { "@gluestack-ui/icon": "latest" },
+  "dependencies": {
+    "@gluestack-ui/icon": "latest",
+    "react-native-svg": "latest"
+  },
   "keywords": ["components", "core"]
 }
